--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           touch ./src/main/resources/application.properties
           echo "spring.jpa.hibernate.ddl-auto=update" >> ./src/main/resources/application.properties
-          echo "spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/horeca" >> ./src/main/resources/application.properties
+          echo "spring.datasource.url=jdbc:mysql://localhost:3306/horeca" >> ./src/main/resources/application.properties
           echo "spring.datasource.username=root" >> ./src/main/resources/application.properties
           echo "spring.datasource.password=testpassword" >> ./src/main/resources/application.properties
           echo "spring.datasource.driver-class-name=org.mariadb.jdbc.Driver" >> ./src/main/resources/application.properties
