--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,8 @@ jobs:
           echo "spring.datasource.username=root" >> ./src/main/resources/application.properties
           echo "spring.datasource.password=testpassword" >> ./src/main/resources/application.properties
           echo "spring.datasource.driver-class-name=org.mariadb.jdbc.Driver" >> ./src/main/resources/application.properties
+          export DOCKER_BUILDKIT=0
+          export COMPOSE_DOCKER_CLI_BUILD=0
       - name: Maven Package
         run: mvn -B clean package -DskipTests
       - name: Maven Verify
@@ -39,6 +41,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
