--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,12 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
         run: |
+          touch ./src/main/resources/application.properties
+          echo "spring.jpa.hibernate.ddl-auto=update" >> ./src/main/resources/application.properties
+          echo "spring.datasource.url=jdbc:mysql://localhost:3306/horeca" >> ./src/main/resources/application.properties
+          echo "spring.datasource.username=root" >> ./src/main/resources/application.properties
+          echo "spring.datasource.password=testpassword" >> ./src/main/resources/application.properties
+          echo "spring.datasource.driver-class-name=org.mariadb.jdbc.Driver" >> ./src/main/resources/application.properties
           ./mvnw clean package
           export DOCKER_BUILDKIT=0
           export COMPOSE_DOCKER_CLI_BUILD=0
