--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
           echo "spring.datasource.url=jdbc:mysql://localhost:3306/horeca" >> ./src/main/resources/application.properties
           echo "spring.datasource.username=root" >> ./src/main/resources/application.properties
           echo "spring.datasource.password=testpassword" >> ./src/main/resources/application.properties
+          echo "spring.datasource.continue-on-error=true" >> ./src/main/resources/application.properties
           echo "spring.datasource.driver-class-name=org.mariadb.jdbc.Driver" >> ./src/main/resources/application.properties
       - name: Maven Package
         run: mvn -B clean package -DskipTests
