--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/sv_backend
 spring.datasource.username=horecarobot
 spring.datasource.password=testpassword
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.continue-on-error=true
