--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>com.github.horeca-robot</groupId>
 			<artifactId>database-library</artifactId>
-			<version>1.10</version>
+			<version>1.10.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
