--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,51 +1,38 @@
-name: Main Branch
+name: CI
 
 on:
   push:
     branches:
       - '*'
-jobs:
 
-  test:
-    name: Unit Test
+jobs:
+  Unit_Test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.11
-      - name: Setup SQL
-        uses: getong/mariadb-action@v1.1
-        with:
-          mysql database: 'horeca'
-          mysql root password: 'testpassword'
-      - name: Create properties file
-        run: |
-          touch ./src/main/resources/application.properties
-          echo "spring.jpa.hibernate.ddl-auto=update" >> ./src/main/resources/application.properties
-          echo "spring.datasource.url=jdbc:mysql://localhost:3306/horeca" >> ./src/main/resources/application.properties
-          echo "spring.datasource.username=root" >> ./src/main/resources/application.properties
-          echo "spring.datasource.password=testpassword" >> ./src/main/resources/application.properties
-          echo "spring.datasource.continue-on-error=true" >> ./src/main/resources/application.properties
-          echo "spring.datasource.driver-class-name=org.mariadb.jdbc.Driver" >> ./src/main/resources/application.properties
-      - name: Maven Package
-        run: mvn -B clean package -DskipTests
-      - name: Maven Verify
-        run: mvn -B clean verify
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+      - uses: actions/checkout@v2
+
+      - name: Change Wrapper permissions
+        run: chmod +x mvnw
+
+      - name: Setup Docker
+        run: docker compose up --build -d
+
+      - name: Unit Tests
+        run: docker compose exec -e SPRING_PROFILES_ACTIVE='docker' bartender-backend ./mvnw test
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build and push
         run: |
           export DOCKER_BUILDKIT=0
           export COMPOSE_DOCKER_CLI_BUILD=0
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/horeca-backend:latest .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/horeca-backend:latest
+          docker build -t iqfx/horeca-backend:backend .
+          docker push iqfx/horeca-backend:backend
