--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       MARIADB_DATABASE: "horecarobot_bartender_backend"
       MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: "true"
-  bankbion-backend:
+  bartender-backend:
     depends_on:
       - db
     container_name: bartender-backend
