--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Change Wrapper permissions
-        run: chmod +x mvnw
 
       - name: Setup Docker
         run: docker compose up --build -d
 
       - name: Unit Tests
-        run: docker compose exec -e SPRING_PROFILES_ACTIVE='docker' bartender-backend ./mvnw test
+        run: docker compose exec -e SPRING_PROFILES_ACTIVE='docker' bartender-backend mvn test
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
