--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         run: docker compose up --build -d
 
       - name: Unit Tests
-        run: docker compose exec -e SPRING_PROFILES_ACTIVE='docker' bartender-backend mvn test
+        run: docker compose exec -e SPRING_PROFILES_ACTIVE='docker' bartender-backend ./mvnw test
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
