--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
 			<version>5.4.2</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.6.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
