Added jwt token to application-docker.properties.example

--- a/src/main/resources/application-docker.properties.example
+++ b/src/main/resources/application-docker.properties.example
@@ -9,3 +9,4 @@ spring.datasource.hikari.minimum-idle= 0
 spring.datasource.hikari.initialization-fail-timeout= -1
 spring.sql.init.continue-on-error= true
 
+horecarobot.jwt.secret=YOUR_KEY_HERE
