--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,9 @@ jobs:
         run: |
           touch ./src/main/resources/application.properties
           echo "spring.jpa.hibernate.ddl-auto=update" >> ./src/main/resources/application.properties
-          echo "spring.datasource.url=jdbc:mysql://localhost:3306/horeca" >> ./src/main/resources/application.properties
-          echo "spring.datasource.username=root" >> ./src/main/resources/application.properties
-          echo "spring.datasource.password=testpassword" >> ./src/main/resources/application.properties
+          echo "spring.datasource.url=jdbc:mysql://iqfx.nl:5566/horecaBot" >> ./src/main/resources/application.properties
+          echo "spring.datasource.username=HorecaBotUser" >> ./src/main/resources/application.properties
+          echo "spring.datasource.password=${{ secrets.DB_PASSWORD }}" >> ./src/main/resources/application.properties
           echo "spring.datasource.continue-on-error=true" >> ./src/main/resources/application.properties
           echo "spring.datasource.driver-class-name=org.mariadb.jdbc.Driver" >> ./src/main/resources/application.properties
           echo "horecarobot.jwt.secret=a3ab2e61c544bc8d9aef075a288f6290" >> ./src/main/resources/application.properties
