--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,3 +50,15 @@ jobs:
           export COMPOSE_DOCKER_CLI_BUILD=0
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/horeca-backend:latest .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/horeca-backend:latest
+
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            docker pull iqfx/horeca-backend:latest
+            docker restart iqfx/horeca-backend
+
